Fixed title that was too big on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
 }
 
 .hero-title {
-    font-size: 6rem;
+    font-size: 5.5rem;
 }
 
 .big-title-bk {
